# CodingResearch

./: .gitignore  CMakeLists.txt  Coder.cpp  Coder.h  Generator.cpp  Generator.h  README.md  Utils.cpp  Utils.h  main.cpp
Coders/: Golomb.cpp  Golomb.h  Huffman.cpp  Huffman.h
Generators/: Arithmetical.cpp  Arithmetical.h  Geometric.cpp  Geometric.h  Markov.cpp  Markov.h
Tests/: Test.cpp  Test.h
Tests/Gists/: conf.plt  out.txt
